--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Shubham Srivastava || Portfolio</title>
 <meta http-equiv="refresh" content="0; URL='https://sites.google.com/view/dataanalysiswithshubham/'" />
 </head>
 <body>
