--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Shubham Srivastava || Portfolio</title>
+<title>Shubham Srivastava- Power BI Data Analyst</title>
+<p>Skills In Data Analyst, How to become a Data Analyst, Projects for Data Analyst, Data Analyst Projects for Resume</p>
 <meta http-equiv="refresh" content="0; URL='https://sites.google.com/view/dataanalysiswithshubham/'" />
 </head>
 <body>
