--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Shubham Srivastava- Power BI Data Analyst</title>
-<p>Skills In Data Analyst, How to become a Data Analyst, Projects for Data Analyst, Data Analyst Projects for Resume</p>
+<title>Shubham Srivastava - Power BI Data Analyst</title>
+<p>I am a person who is always passionate about Data and Skills In Data Analyst, How to become a Data Analyst, Projects for Data Analyst, Data Analyst Projects for Resume, Data Science</p>
 <meta http-equiv="refresh" content="0; URL='https://sites.google.com/view/dataanalysiswithshubham/'" />
 </head>
 <body>
