--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Shubham Srivastava - Power BI Data Analyst Associate</title>
+<title>Shubham Srivastava - Data Analyst -AWS Cloud Aspirants</title>
 <p>I am a person who is always passionate about Data and Skills In Data Analyst, How to become a Data Analyst, Projects for Data Analyst, Data Analyst Projects for Resume, Data Science</p>
 <meta http-equiv="refresh" content="0; URL='https://sites.google.com/view/dataanalysiswithshubham/'" />
 </head>
